--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -231,7 +231,7 @@ textarea {
 }
 
 button[type="submit"] {
-  background-color: #007bff;
+  background-color: red;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -241,7 +241,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: rgb(247, 181, 181);
 }
 
 .aviso {
