--- a/src/Perfil_Usuario/PerfilUsuario.css
+++ b/src/Perfil_Usuario/PerfilUsuario.css
@@ -1,6 +1,6 @@
 /* Estilo general de la sección */
 .usuario {
-    margin-top: 60px;
+    margin-top: 1vh;
     display: flex;
     justify-content: center;
     align-items: center;
