--- a/src/Barra/Barra.css
+++ b/src/Barra/Barra.css
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    height: 60px;
+    height: 9vh;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra exterior ligera */
 }
 
