--- a/src/Catalogo/Catalogo.css
+++ b/src/Catalogo/Catalogo.css
@@ -50,7 +50,7 @@
     transition: box-shadow 0.3s ease-in-out; /* Transición suave para la sombra */
 }
 
-img:hover {
+.ImagenCatalogo:hover {
     box-shadow: 0 8px 10px rgba(0, 0, 0, 0.3); /* Sombra más intensa al pasar el cursor */
 }
 
