--- a/src/Historial/Historial.css
+++ b/src/Historial/Historial.css
@@ -2,7 +2,6 @@
 .historial {
     margin-top: 10vh;
     display: flex;
-    justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
     min-height: 100vh;
@@ -19,7 +18,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-left: 80px; /* Ajusta el margen para dejar espacio para los íconos */
+    margin-left: 20vw; /* Ajusta el margen para dejar espacio para los íconos */
 }
 
 /* Título del historial */
